# middleware

./: CMakeLists.txt  README.md  main.cpp
OpenCV-example/: CMakeLists.txt  main.cpp
OpenCV-example/src/: trainTest.cpp
include/: Connector.h  LocationCache.h  ParamStruct.h
include/COM/: ComCallback.h  ComServicer.h  MYClient.h  MessagePushServicer.h
include/LBS/: LocationService.h
lib/opencv4/include/opencv2/: cvconfig.h
lib/opencv4/lib/: libopencv_calib3d.so.407  libopencv_features2d.so.407  libopencv_flann.so.407  libopencv_highgui.so.4.7.0  libopencv_imgcodecs.so.407  libopencv_objdetect.so.407  libopencv_video.so.4.7.0
lib/paho.mqtt.c/install/lib/: libpaho-mqtt3a.so.1.3.12  libpaho-mqtt3c.so.1.3.12
lib/paho.mqtt.c/install/lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig.cmake
src/: LocationCache.cpp  LocationService.cpp
src/COM/: ComCallback.cpp  ComServicer.cpp  MYClient.cpp  MessagePushServicer.cpp
src/LBS/: Connector.cpp  ParamStruct.cpp
testFIle/: testCom.cpp  testMPS.cpp
